# shift-manager

./: .gitignore  Cargo.toml  README.md
config/: default.toml
crates/agents/: Cargo.toml
crates/agents/src/: claude_code.rs  lib.rs  shell_process.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: daemon.rs  mod.rs  schedule.rs  session.rs  suspend.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  error.rs  lib.rs  manifest.rs  platform.rs  schedule.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: health.rs  lib.rs  lifecycle.rs  main.rs  scheduler.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  local_fs.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
