[package]
name = "shift-manager-state"
version.workspace = true
edition.workspace = true

[dependencies]
shift-manager-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
shift-manager-core = { path = "../core", features = ["test-utils"] }
