[package]
name = "shift-manager-web"
version.workspace = true
edition.workspace = true

[dependencies]
shift-manager-core = { path = "../core" }
shift-manager-state = { path = "../state" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
tempfile = "3"
